@@ -1,3 +1,7 @@
+Sun Nov 20 23:17:23 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* decode.c: Improve previous change.
+
 Sun Nov 20 23:02:10 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* variables.c, variables.h (c_gbl, c_lcl, c_set): Drop doLowerCase
